--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1534,7 +1534,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #cccccc;
 }
 .cid-qLq116aZ3G button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1754,8 +1754,8 @@ body {
   color: #767676 !important;
 }
 .cid-qLpQsjm6wE {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/ilya-pavlov-87438-unsplash-2000x1335.jpg");
 }
 .cid-qLpQsjm6wE .media-container-column {
