--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -92,12 +92,15 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  padding: 1rem 3rem;
-  border-radius: 3px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   word-break: break-word;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+  display: -webkit-inline-flex;
+  padding: 1rem 3rem;
+  border-radius: 3px;
 }
 .btn-sm {
   font-weight: 500;
@@ -591,6 +594,7 @@ a:hover {
   left: 30%;
   bottom: 30%;
   transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
 /* Others*/
 .note-check a[data-value=Rubik] {
@@ -631,6 +635,7 @@ a:hover {
   position: absolute;
   transform: rotate(45deg);
   width: 14px;
+  -webkit-transform: rotate(45deg);
 }
 .form-control {
   background-color: #f5f5f5;
@@ -661,6 +666,7 @@ a:hover {
   right: 0;
   top: 0;
   z-index: 0;
+  pointer-events: none;
 }
 blockquote {
   font-style: italic;
@@ -692,6 +698,7 @@ pre {
 }
 .mbr-section__comments .row {
   justify-content: center;
+  -webkit-justify-content: center;
 }
 /* Forms */
 .mbr-form .btn {
@@ -1072,10 +1079,7 @@ pre {
     align-items: center;
   }
   .navbar-toggleable-sm .navbar-collapse {
-    display: -webkit-box !important;
-    display: -webkit-flex !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: none;
     width: 100%;
   }
   .navbar-toggleable-sm .navbar-toggler {
@@ -1263,6 +1267,7 @@ pre {
 }
 .menu .navbar.collapsed:not(.beta-menu) {
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 .carousel-item.active,
 .carousel-item-next,
@@ -1283,6 +1288,42 @@ body {
 }
 .dropup .dropdown-toggle::after {
   display: none;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .card-wrapper {
+    flex: auto!important;
+  }
+}
+.jq-selectbox li:hover,
+.jq-selectbox li.selected {
+  background-color: #e25127;
+  color: #ffffff;
+}
+.jq-selectbox .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:after,
+.jq-number__spin.plus:after {
+  transition: 0.4s;
+  border-top-color: currentColor;
+  border-bottom-color: currentColor;
+}
+.jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:hover:after,
+.jq-number__spin.plus:hover:after {
+  border-top-color: #e25127;
+  border-bottom-color: #e25127;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
+  color: #ffffff !important;
+  background-color: #e25127 !important;
+  box-shadow: none!important;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td:hover,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
+  color: #ffffff !important;
+  background: #e25127 !important;
+  box-shadow: none !important;
 }
 .cid-qLq116aZ3G .navbar {
   background: #333333;
@@ -1861,7 +1902,7 @@ body {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #333333;
-  background: linear-gradient(#333333, #efefef);
+  background: linear-gradient(#333333, #333333);
 }
 .cid-rdloyRp1iq .carousel-control {
   background: #000;
@@ -2062,10 +2103,13 @@ body {
     display: block;
   }
 }
+.cid-rdloyRp1iq H2 {
+  color: #efefef;
+}
 .cid-qMbxhIGB1a {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/mbr-1745x1080.jpg");
+  background-color: #333333;
   position: relative;
 }
 .cid-qMbxhIGB1a .card {
@@ -2101,15 +2145,15 @@ body {
   color: #767676;
 }
 .cid-qMbxhIGB1a H4 {
-  color: #333333;
+  color: #efefef;
 }
 .cid-qMbxhIGB1a .panel-text {
-  color: #333333;
+  color: #c1c1c1;
 }
 .cid-qLpQdR5XVr {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #efefef;
+  background-color: #333333;
 }
 .cid-qLpQdR5XVr h3 {
   text-align: center;
@@ -2141,10 +2185,10 @@ body {
   }
 }
 .cid-qLpQdR5XVr .mbr-section-title {
-  color: #333333;
+  color: #efefef;
 }
 .cid-qLpQdR5XVr P {
-  color: #333333;
+  color: #efefef;
 }
 .cid-qLpQdR5XVr H4 {
   color: #333333;
@@ -2152,7 +2196,7 @@ body {
 .cid-qLpQjPgJmy {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1674x1080.jpg");
+  background-color: #333333;
 }
 .cid-qLpQjPgJmy .title {
   margin-bottom: 2rem;
@@ -2177,10 +2221,10 @@ body {
   text-align: center;
 }
 .cid-qLpQjPgJmy H2 {
-  color: #333333;
+  color: #efefef;
 }
 .cid-qLpQjPgJmy LABEL {
-  color: #333333;
+  color: #efefef;
 }
 .cid-qLqbtksNqL {
   padding-top: 30px;
